# TankServer

./: CMakeLists.txt  CMakeUserPresets.json  TankServer.sln
TankServer/: Server.cpp  Server.h  TankServer.vcxproj  main.cpp
